Created ProductA and ProductB class with caluclationUnit.Removed unused file and updated swagger.
