# API/Controllers/ProductsController.cs
@@ -1,10 +1,9 @@
 ﻿using System.Collections.Generic;
 using System.Net;
 using System.Threading.Tasks;
-using API.Dto;
 using API.ExceptionHandler;
+using API.Model;
 using API.Provider;
-using AutoMapper;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 
@@ -15,28 +14,26 @@ namespace API.Controllers
     public class ProductsController : ControllerBase
     {
         private readonly IProductDataProvider _productDataProvider;
-        private readonly IMapper _mapper;
 
-        public ProductsController(IProductDataProvider productDataProvider, IMapper mapper)
+        public ProductsController(IProductDataProvider productDataProvider)
         {
             _productDataProvider = productDataProvider;
-            _mapper = mapper;
         }
 
         /// <summary>
         /// Get products based on consumption
         /// </summary>
         /// <param name="consumption">Consumption (kWh/year)</param>
-        /// <returns><seealso cref="IReadOnlyList{ProductDto}"/></returns>
+        /// <returns><seealso cref="IReadOnlyList{Product}"/></returns>
         [HttpGet]
         [ProducesResponseType(StatusCodes.Status200OK)]
         [ProducesResponseType(typeof(ApiResponse), StatusCodes.Status404NotFound)]
-         public async Task<ActionResult<IReadOnlyList<ProductDto>>> GetProducts(int consumption)
+         public async Task<ActionResult<IReadOnlyList<Product>>> GetProducts(int consumption)
         {
             var productOutcome = await _productDataProvider.GetProductsAsync(consumption);
 
             if (productOutcome.Successful)
-                return Ok(_mapper.Map<IReadOnlyList<ProductDto>>(productOutcome.Result));
+                return Ok(productOutcome.Result);
             else
                 return NotFound(new ApiResponse((int)HttpStatusCode.NotFound, productOutcome.ErrorMessage));
         }
