# API/ICalculationUnit.cs
@@ -1,0 +1,10 @@
+﻿namespace API
+{
+    public interface ICalculationUnit
+    {
+        int Consumption { get; set; }
+        decimal AnnualCosts { get; }
+        decimal BaseCost { get; }
+        decimal ConsumptionCost { get; }
+    }
+}
