# API/Model/Product.cs
@@ -3,7 +3,6 @@
     public class Product
     {
         public string TariffName { get; set; }
-        public int Consumption { get; set; }
         public decimal AnnualCosts { get; set; }
     }
 }
